# s3-archiver

./: .dockerignore  .env.e2e  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: parser-copy-mode-matrix.md  parsers.md  readme-detailed.md
plans/: 20260409-170043-uv-monorepo-bootstrap.md  20260420-archive-workflow-isolated-localstack.md  20260427-daily-filename-timestamp-archives.md  20260504-configurable-parser-archiver.md  README.md
scripts/: check_type_coverage.py  docker-entrypoint.py  release.sh  run.sh  run_archive.sh  run_e2e.sh  run_full_suite.sh  run_integration.sh  run_visual_cleanup_demo.sh  run_visual_demo.sh
tests/: conftest.py
tests/e2e/: archive_compose_support.py  compose_helpers.py  test_compose_archive.py  test_compose_archive_coverage.py  test_compose_scheduler_runtime.py  test_compose_scheduler_timeout_runtime.py  test_compose_stack.py  test_compose_temp_dir.py  test_compose_visual_demo.py  test_compose_visual_demo_cleanup.py  visual_demo_data.py  visual_demo_summary.py  visual_demo_terminal.py
tests/integration/: __init__.py  archive_cli_test_support.py  folder_timestamp_archive_support.py  localstack_harness.py  localstack_object_helpers.py  scheduler_timeout_probe.py  test_localstack_archive.py  test_localstack_archive_folder_timestamp.py  test_localstack_archive_folder_timestamp_child.py  test_localstack_archive_timeout.py  test_localstack_archive_versioning.py  test_localstack_health.py  test_localstack_health_compose_logs.py  test_localstack_scheduler.py  test_localstack_timestamp_seed.py
tests/unit/: __init__.py  archive_s3_fakes.py  archive_workflow_fakes.py  cli_archive_test_support.py  health_helpers.py  localstack_support_fakes.py  settings_fakes.py  test_archive.py  test_archive_canonical_retention.py  test_archive_cleanup_runtime.py  test_archive_clock.py  test_archive_copy_success_edges.py  test_archive_core_edge_coverage.py  test_archive_daily_filename_timestamps.py  test_archive_daily_verification.py  test_archive_date_range.py  test_archive_date_range_filter.py  test_archive_date_range_settings.py  test_archive_direct_copy_phase_edges.py  test_archive_direct_verification_edges.py  test_archive_edge_cases.py  test_archive_group_metadata_digest.py  test_archive_identity_worker_manifest_edges.py  test_archive_lock.py  test_archive_lock_edges.py  test_archive_lock_reporting.py  test_archive_manifest_sqlite_store.py  test_archive_manifest_utc.py  test_archive_options.py  (+83 more)
(+4 files in other folders)
